--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -21,17 +21,17 @@
                 <h2>Registration Form</h2>
                 <div class="form-group">
                     <div class="col-sm-9">
-                        <label th:if="${#fields.hasErrors('first_name')}" th:errors="*{first_name}"
+                        <label th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}"
                                class="validation-message"></label>
-                        <input type="text" th:field="*{first_name}" placeholder="Name"
+                        <input type="text" th:field="*{firstName}" placeholder="Name"
                                class="form-control" />
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="col-sm-9">
-                        <label th:if="${#fields.hasErrors('last_name')}" th:errors="*{last_name}"
+                        <label th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}"
                                class="validation-message"></label>
-                        <input type="text" th:field="*{last_name}"
+                        <input type="text" th:field="*{lastName}"
                                placeholder="Last Name" class="form-control" />
                     </div>
                 </div>
@@ -45,9 +45,9 @@
                 </div>
                 <div class="form-group">
                     <div class="col-sm-9">
-                        <input type="text" th:field="*{user_name}" placeholder="Username"
+                        <input type="text" th:field="*{userName}" placeholder="Username"
                                class="form-control" /> <label
-                            th:if="${#fields.hasErrors('user_name')}" th:errors="*{user_name}"
+                            th:if="${#fields.hasErrors('userName')}" th:errors="*{userName}"
                             class="validation-message"></label>
                     </div>
                 </div>
