--- a/src/main/resources/templates/mutts_app.html
+++ b/src/main/resources/templates/mutts_app.html
@@ -7,11 +7,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>mutts_app</title>
     <link rel="shortcut icon" href="https://github.com/crowned1/MuttsAppEndofDay3/blob/master/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" type="text/css" th:href="@{css/styles.css}">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" th:href="@{css/styles.css}">
     <!-- link to style sheet -->
 </head>
 <body>
+    <!-- Button trigger modal -->
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+    Launch demo modal
+  </button>
+  
+  <!-- Modal -->
+  <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          ...
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save changes</button>
+        </div>
+      </div>
+    </div>
+  </div>
 <input type="hidden" th:value="${user_id}" id="user_id">
     <header>
         <div id="header-sidebar">
