--- a/src/main/resources/templates/mutts_app.html
+++ b/src/main/resources/templates/mutts_app.html
@@ -18,12 +18,17 @@
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
-        </div id="new-chat-body" class="modal-body">
-        <form id="new-chat-frm">
-            <input id="new-chat-user" type="text" list="users-list" class="form-control">
-            <datalist id="users-lists"> </datalist>
-            <input type="submit" class="btn btn-success">
-        </form>
+        </div>
+          <div id="new-chat-body" class="modal-body">
+        <div id="new-chat-modal-body" class="modal-body">
+            <!-- <div> <form id="new-chat-frm">
+                <input id="new-chat-user" type="text" list="users-list" class="form-control">
+                <datalist id="users-lists"> </datalist>
+                <input type="submit" class="btn btn-success">
+            </form>
+        </div> -->
+        </div>
+          </div>
       </div>
     </div>
   </div>
