--- a/src/main/resources/templates/mutts_app.html
+++ b/src/main/resources/templates/mutts_app.html
@@ -36,7 +36,7 @@
     <header>
         <div id="header-sidebar">
             <div id="self-image" class="img-wrap">
-                <img src="images/profile_pic.jpg" alt="hello">
+                <img src="https://i.pinimg.com/originals/bc/51/c7/bc51c7f9ef71252b8987566ede1e3b74--welsh-corgi-corgis.jpg" alt="hello">
             </div>
             <!--multiple elements in row: use ordered or unordered list -->
             <div id="header-sidebar-icons">
@@ -143,7 +143,7 @@
                     </svg>
                 </button>
                 <div class="form-wrap">
-                    <form id="send-message" data-chat_id> type message here
+                    <form id="send-message" data-chat_id> 
                         <input type="text" name="message" id="new-message" disabled>
                     </form>
                 </div>
