--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -1,3 +1,5 @@
+h3{text-align: center;}
+
 .wrapper {
    margin-top: 80px;
    margin-bottom: 20px;
@@ -29,3 +31,4 @@ input[type="password"] {
   border-top-left-radius: 0;
   border-top-right-radius: 0;
 }
+
