--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -70,6 +70,8 @@ header{
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    border: none;
+    background: inherit;
 }
 
 /* right side of the header */
@@ -160,7 +162,7 @@ header{
 
 /* This is the wrap around the message previews */
 .sidebar > .message-preview-wrap {
-    background-color: rgb(24, 36, 103); 
+    background-color: 1px solid grey; 
     /* formerly whitesmoke */
     width: 100%;
     height: 100%;
@@ -181,7 +183,7 @@ space among items in container when size unknown and/or dynamic
 .message-preview-box {
     background-color: #ffffff;
     /* #ffffff */
-    border: 1px solid black;
+    border-bottom: 1px solid gray;
     width: 100%;
     height: 100px;
     display: flex;
@@ -268,6 +270,7 @@ space among items in container when size unknown and/or dynamic
     justify-content: flex-start;
     align-items: flex-start;
     padding: 0 20px;
+    margin-bottom: 10px;
 }
 
 .chat-bubble {
