--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -8,12 +8,12 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
-<body>
+<body style="text-align: center;">
 <form th:action="@{/registration}" method="get">
 	<button class="btn btn-md btn-warning btn-block" type="Submit">Go To Registration Page</button>
 </form>
 <div class="container">
-	<img th:src="@{images/ollie.jpeg}" class="img-responsive center-block" width="300" height="300" alt="Logo" />
+	<img th:src="@{images/MuttsAppLogo.png}" class="img-responsive center-block" width="300" height="300" alt="Logo" />
 	<form th:action="@{/login}" method="POST" class="form-signin">
 		<h3 class="form-signin-heading" th:text="Welcome"></h3>
 		<br/>
