--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -15,7 +15,7 @@
 <div class="container">
 	<img th:src="@{images/MuttsAppLogo.png}" class="img-responsive center-block" width="300" height="300" alt="Logo" />
 	<form th:action="@{/login}" method="POST" class="form-signin">
-		<h3 class="form-signin-heading" th:text="Welcome"></h3>
+		<h3 class="form-signin-heading" >Welcome to MuttsApp</h3>
 		<br/>
 		<input type="text" id="email" name="email"  th:placeholder="Email"
 			   class="form-control" /> <br/>
