--- a/src/main/resources/templates/mutts_app.html
+++ b/src/main/resources/templates/mutts_app.html
@@ -13,25 +13,22 @@
 </head>
 <body>
   
-  <!-- New Chat Modal -->
-  <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<!-- New Chat Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
     <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">New chat</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div id="new-chat-modal-body" class="modal-body">
+                ...loading
+            </div>
         </div>
-          <div id="new-chat-body" class="modal-body">
-        <div id="new-chat-modal-body" class="modal-body">
-            <!-- <div> <form id="new-chat-frm">
-                <input id="new-chat-user" type="text" list="users-list" class="form-control">
-                <datalist id="users-lists"> </datalist>
-                <input type="submit" class="btn btn-success">
-            </form>
-        </div> -->
-        </div>
-          </div>
-      </div>
     </div>
-  </div>
+</div>
 <input type="hidden" th:value="${user_id}" id="user_id">
     <header>
         <div id="header-sidebar">
@@ -164,5 +161,7 @@
             </div>
         </div>
     </div>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 <script th:src="@{js/mutts_app.js}"></script>
 </body>
